kubernetes/deploy-app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semesta-app1-service
  namespace: semesta
spec:
  selector:
    name: semesta-app1
  ports:
    - port: 80
      targetPort: 3000
